<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/entrantEventStatusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You have been invited to attend!"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/invitationDeclineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Decline"
            android:layout_marginEnd="10dp"/>
        <Button
            android:id="@+id/invitationAcceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Accept"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>