<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/waitlistClosedMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The waitlist is closed."
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/differentEventMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up for a different event!"
        android:textSize="20sp"/>
</LinearLayout>